@@ -1,25 +1,22 @@
 package com.bot.eyelashes.handler.impl;
 
+import com.bot.eyelashes.enums.map.ScheduleClientMap;
 import com.bot.eyelashes.handler.Handle;
 import com.bot.eyelashes.handler.registration.ScheduleForClient;
-import com.bot.eyelashes.handler.schedule.HandleSchedule;
 import com.bot.eyelashes.mapper.ScheduleMapper;
 import com.bot.eyelashes.model.dto.ScheduleDto;
-import com.bot.eyelashes.model.entity.Schedule;
 import com.bot.eyelashes.repository.ScheduleRepository;
 import lombok.RequiredArgsConstructor;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
-import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @RequiredArgsConstructor
-public class HandleScheduleClientImpl implements Handle {
+public class HandleClientScheduleImpl implements Handle {
 
 
     private final ScheduleMapper scheduleMapper;
@@ -31,28 +28,16 @@ public class HandleScheduleClientImpl implements Handle {
         return null;
     }
 
-
     @Override
     public InlineKeyboardMarkup createInlineKeyboard() {
-        return null;
-    }
-
-    public InlineKeyboardMarkup createInlineKeyboardWithCallback(CallbackQuery callbackQuery){
-        ScheduleForClient scheduleForClient = new ScheduleForClient(scheduleRepository,scheduleMapper);
-        ScheduleDto scheduleDto = scheduleForClient.getMasterDays(649681305L);
+        ScheduleForClient scheduleForClient = new ScheduleForClient(scheduleRepository, scheduleMapper);
+        ScheduleDto scheduleDto = scheduleForClient.getMasterDays(HandleRecordMenuImpl.masterId);
+        ScheduleClientMap scheduleClientMap = new ScheduleClientMap(scheduleDto);
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
-        buttons.add(Arrays.asList(
-                InlineKeyboardButton.builder().text(scheduleDto.getMasterId().toString()).callbackData("asd").build()
-        ));
+        scheduleClientMap.getTrueDays().forEach(days -> buttons.add(List.of(InlineKeyboardButton.builder().text(days.toString()).callbackData("DATE/" + days).build())));
         inlineKeyboardMarkup.setKeyboard(buttons);
         return inlineKeyboardMarkup;
     }
 
-
-    private List<String> getDayName(ScheduleDto scheduleDto){
-        List<String> days = new ArrayList<>();
-        days.addAll(List.of("Понедельник","Вторник","Среда","Четверг","Пятница"));
-        return null;
-    }
 }
